# BKIT_ARM4_MiniDashboard

./: .cproject  .project  Dataset_Anonymized_Invigilator_Assignment_Problem.xlsx  IAP_Solver.py  README.md
BKIT_ARM4-main/BKIT_ARM4-main/Assignment/Assignment1_Pacman/: README.md
C++/DashboardAccessControl/: .mxproject  DashboardAccessControl.ioc
C++/DashboardAccessControl/BKIT_ARM4-main/BKIT_ARM4-main/: README.md
C++/DashboardAccessControl/BKIT_ARM4-main/BKIT_ARM4-main/Assignment/: README.md
C++/DashboardAccessControl/Core/Inc/: main.h
C++/DashboardAccessControl/Core/Src/: freertos.c  gpio.c  spi.c  tim.c
C++/Firmware1/: .mxproject  CMakeLists.txt  Firmware1.ioc  README.md  STM32F407ZGTx_FLASH.ld  startup_stm32f407xx.s
C++/Firmware1/Core/Inc/: main.h
C++/Firmware1/Core/Src/: main.c  stm32f4xx_hal_msp.c  syscalls.c
C++/Firmware1/EWARM/: Firmware1.ewd  Firmware1.ewp  Project.eww
C++/Firmware1/build-ninja/: .ninja_deps  .ninja_log  CMakeCache.txt  Firmware1.elf  Firmware1.hex  Firmware1.map  build.ninja  cmake_install.cmake
C++/Firmware1/cmake/: arm-none-eabi.cmake
C++/MHH/: IAP_Solver.py
Core/Inc/: stm32f4xx_hal_conf.h  stm32f4xx_it.h
Core/Src/: fsmc.c  main.c  stm32f4xx_it.c  usart.c
